Bug 161346 - CRASH: exporting to PDF
Summary: CRASH: exporting to PDF
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium critical
Assignee: Michael Stahl
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks: PDF-Export Crash
  Show dependency treegraph
 
Reported: 2024-05-30 17:35 UTC by Xisco Faulí
Modified: 2024-07-23 08:13 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (12.99 KB, text/plain)
2024-05-30 18:12 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2024-05-30 17:35:50 UTC
Steps to reproduce:
1. Open attachment 58982 [details] from bug 47811
2. Export to PDF

-> Crash

Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a525895a5f820350dc307969b1e8fd5d218a1ddd
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2024-05-30 17:36:31 UTC
Regression introduced by:

author	Michael Stahl <michael.stahl@allotropia.de>	2024-01-24 15:05:07 +0100
committer	Michael Stahl <michael.stahl@allotropia.de>	2024-01-25 11:46:46 +0100
commit 9ba8d68c2b2fd06340bbdcb61dc3d57f6e3eb974 (patch)
tree 7c8763cf73581821fc9e35f7975b373478e4bdb6
parent 42a315b4a777dc371297752b6233e437d36c456b (diff)
tdf#142806 sw: PDF export: fix multi-frame links/fields

Bisected with: bibisect-linux64-24.8
Comment 2 Julien Nabet 2024-05-30 18:12:47 UTC
Created attachment 194461 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 3 m_a_riosv 2024-05-31 00:15:26 UTC
Repro
Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6084962f93efc005b6827edceae12d3170f17ccd
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 22631); UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 4 Matt K 2024-06-10 16:57:51 UTC
Fix posted at: https://gerrit.libreoffice.org/c/core/+/168644
Comment 5 Commit Notification 2024-06-14 13:58:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a9bc3ea1bef2a6b622a729dfa18eb3851ce7101e

tdf#161346 sw: PDF export: fix crash on field in hidden text frame

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-14 17:14:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/571d13b03d0cd53a39ceaabd00cbff3e7fb6ade2

tdf#161346 sw: PDF export: fix crash on field in hidden text frame

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-14 17:43:05 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9561c81642316bda9b2df1e7a71f8f2130e383d6

tdf#161346 sw: PDF export: fix crash on field in hidden text frame

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Julien Nabet 2024-06-15 09:20:01 UTC
Just for the record I confirm I don't reproduce this anymore with master sources updated today.
Thank you Michael! :-) (perhaps you got another patch related to this so I let you put this one to FIXED when it's ok for you).
Comment 9 Michael Stahl 2024-06-17 11:57:32 UTC
okay thanks Julien, should be fixed on master
Comment 10 Commit Notification 2024-06-18 08:46:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d0c979b4baee55b4d7352f7ebab201e65d6c1fcd

tdf#161346 add unit test

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 kundewayne 2024-07-23 06:59:15 UTC Comment hidden (spam)